# project_03-mtdaley

./: AvlTree.h  BinarySearchTree.h  CMakeLists.txt  Prospects.h  README.md  SplayTree.h  main.cpp  milb_stats.csv  randomNumber.cpp  shuffleVector.cpp  splayTests2.cpp  timing.cpp  writeToFile.cpp
data/: AVLOrdered.csv  AVLrand.csv  example_output.csv  findspt.csv  frog.txt  milb_stats.csv  ordered.csv  prospectavl.csv  prospectbst.csv  splay_trace.csv  sptorder.csv  sptprospect.csv  sptrand.csv
